--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: test
   annotations:
     backstage.io/techdocs-ref: dir:.
-    sonarqube.org/project-key: dev-acie-sftp
+    sonarqube.org/project-key: default/dev-acie-sftp
 spec:
   type: service
   owner: user:guest
